Namespace of PackageBootstrap fixed

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,6 @@
     }  
   },
   "extra": {
-    "bootstrap": "abexto\\amylian\\yii\\doctrine\\common\\PackageBoostrap"
+    "bootstrap": "abexto\\amylian\\yii\\doctrine\\dbal\\PackageBoostrap"
   }
 }
