Specify 2.5 as minimum for doctrine/dbal

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "doctrine/dbal": "@stable",
+    "doctrine/dbal": "^2.5@stable",
     "amylian/yii2-amylian-doctrine-common": "*"
   },
   "require-dev": {
