require dev-master during development

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "doctrine/dbal": "^2.5@stable",
-    "amylian/yii2-amylian-doctrine-common": "*"
+    "amylian/yii2-amylian-doctrine-common": "dev-master"
   },
   "require-dev": {
     "amylian/yii2-amylian-phpunit": "*"
