--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ services:
     - memcached
     - redis-server
     - docker
+    
+env:
+  - YII_VERSION="2.0.*"
+  - YII_VERSION="2.1.*@dev"
 
 before_install:
     - pecl channel-update pecl.php.net
@@ -30,6 +34,7 @@ install:
   - travis_retry composer self-update && composer --version
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --prefer-dist --no-interaction
+  - composer require yiisoft/yii2:${YII_VERSION}
   
 before_script:
   - cp tests/_travis/phpunit.xml phpunit.xml
