--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
     {
       "type": "composer",
       "url": "https://asset-packagist.org"
+    },
+    {
+    "type": "vcs",
+    "url": "https://gitlab.com/yiisoft/yii2"
     }
   ],
   "require": {
