--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     }
   ],
   "require": {
+    "php": "^7.1",
     "doctrine/dbal": "^2.5@stable",
     "amylian/yii2-amylian-doctrine-common": "dev-master@dev"
   },
