--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,51 @@
 {
-  "name": "amylian/yii2-amylian-doctrine-dbal",
-  "description": "ATTENTION EXPERIMENTAL! Doctrine/DBAL Components for Yii2",
-  "type": "yii2-extension",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "authors": [{
-      "name": "Andreas Prucha (Abexto - Helicon Software Development - Andreas Prucha / Amylian Project)",
-      "email": "andreas.prucha@gmail.com",
-      "homepage": "http://www.abexto.com",
-      "role": "Developer"
-    }    
-  ],
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://asset-packagist.org"
-    },
-    {
-    "type": "vcs",
-    "url": "https://gitlab.com/yiisoft/yii2"
-    }
-  ],
-  "require": {
-    "php": "^7.1",
-    "doctrine/dbal": "^2.5@stable",
-    "amylian/yii2-amylian-doctrine-common": "dev-master@dev"
-  },
-  "require-dev": {
-    "amylian/yii2-amylian-phpunit": "*"
-  },
-  "autoload": {
-    "psr-4": {
-      "amylian\\yii\\doctrine\\dbal\\": "src/"
-    }  
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "amylian\\yii\\doctrine\\dbal\\tests\\": "tests/"
-    }  
-  },
-  "extra": {
-    "bootstrap": "amylian\\yii\\doctrine\\dbal\\PackageBootstrap"
-  }
+	"name" : "amylian/yii2-amylian-doctrine-dbal",
+	"description" : "ATTENTION EXPERIMENTAL! Doctrine/DBAL Components for Yii2",
+	"type" : "yii2-extension",
+	"minimum-stability" : "dev",
+	"prefer-stable" : true,
+	"config" : {
+		"preferred-install" : {
+			"doctrine/dbal" : "source",
+			"*" : "auto"
+		}
+	},
+	"authors" : [{
+			"name" : "Andreas Prucha (Abexto - Helicon Software Development - Andreas Prucha / Amylian Project)",
+			"email" : "andreas.prucha@gmail.com",
+			"homepage" : "http://www.abexto.com",
+			"role" : "Developer"
+		}
+	],
+	"repositories" : [{
+			"type" : "composer",
+			"url" : "https://asset-packagist.org"
+		}, {
+			"type" : "vcs",
+			"url" : "https://gitlab.com/yiisoft/yii2"
+		}
+	],
+	"require" : {
+		"php" : "^7.1",
+		"doctrine/dbal" : "^2.5@stable",
+		"amylian/yii2-amylian-doctrine-common" : "dev-master@dev",
+		"amylian/yii2-amylian-doctrine-cache" : "dev-master@dev"
+	},
+	"require-dev" : {
+		"amylian/yii2-amylian-phpunit" : "*",
+		"phpunit/phpunit" : "*"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"amylian\\yii\\doctrine\\dbal\\" : "src/"
+		}
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"amylian\\yii\\doctrine\\dbal\\tests\\" : "tests/"
+		}
+	},
+	"extra" : {
+		"bootstrap" : "amylian\\yii\\doctrine\\dbal\\PackageBootstrap"
+	}
 }
