--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 	"require" : {
 		"php" : "^7.1",
 		"doctrine/dbal" : "^2.5@stable",
+		"amylian/amylian-utils" : "dev-master@dev",
 		"amylian/yii2-amylian-doctrine-common" : "dev-master@dev",
 		"amylian/yii2-amylian-doctrine-cache" : "dev-master@dev"
 	},
