--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
 		"doctrine/dbal" : "^2.5@stable",
 		"amylian/amylian-utils" : "dev-master@dev",
 		"amylian/amylian-doctrine-dbal" : "dev-master@dev",
-		"amylian/yii2-amylian-doctrine-common" : "dev-master@dev",
-		"amylian/yii2-amylian-doctrine-cache" : "dev-master@dev"
+		"amylian/yii2-amylian-doctrine-common" : "dev-master",
+		"amylian/yii2-amylian-doctrine-cache" : "dev-master"
 	},
 	"require-dev" : {
 		"amylian/yii2-amylian-phpunit" : "*",
